CCE-561 : squishy mobile menu fix.

--- a/docs/template/public/less/_side-nav.less
+++ b/docs/template/public/less/_side-nav.less
@@ -108,16 +108,13 @@ body.has-left-nav.toggled #kss-wrapper{
 body.has-left-nav #kss-nav {
     position: fixed;
     z-index: 901;
-    left: 250px;
+    width: 250px;
+    left:0;
     top: 0;
-    width: 0;
+    width: 250px;
     height: 100%;
-    margin-left: -250px;
     padding: 100px 0 0 0;
     overflow-y: auto;
-    -webkit-transition: all 0.4s ease-out;
-    -moz-transition: all 0.4s ease-out;
-    -o-transition: all 0.4s ease-out;
     transition: all 0.4s ease-out;
 }
 
@@ -126,7 +123,7 @@ body.has-left-nav.navbar-super-up #kss-nav {
 }
 
 body.has-left-nav.toggled #kss-wrapper #kss-nav {
-    width: 250px;
+    left:0!important;
     background: @dark-blue none repeat scroll 0 0;
     position: absolute;
 
@@ -135,8 +132,9 @@ body.has-left-nav.toggled #kss-wrapper #kss-nav {
 #kss-main {
     padding: 15px;
 }
+
 body.has-left-nav.toggled #kss-wrapper #kss-main {
-    margin-right: -250px;
+    // margin-right: -250px;
 }
 
 /* Sidebar Styles */
@@ -148,6 +146,7 @@ body.has-left-nav .sidebar-nav {
     padding: 0;
     list-style: none;
 }
+
 @media(min-width:769px) {
     body.has-left-nav #kss-wrapper {
         padding-left: 265px;
@@ -167,10 +166,6 @@ body.has-left-nav .sidebar-nav {
 
     body.has-left-nav.kss-sidebar-nav-mobile-only #kss-wrapper {
         background: none;
-    }
-
-    body.has-left-nav #kss-nav {
-        width: 250px;
     }
 
     body.has-left-nav.navbar-super-up #kss-nav {
